# shoegaze2

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  freetype.cmake
src/Shoegaze2/Apps/: Application.cpp  Application.h
src/Shoegaze2/Apps/DemoApp/: DemoApp.h
src/Shoegaze2/GUI/: Color.h  Container.h  Layout.h  View.h
src/Shoegaze2/GUI/Drawing/: Brush.h  Canvas.h  Image.h  Matrix.h  Paint.h  Path.h
src/Shoegaze2/GUI/Font/: Font.cpp  Font.h
src/Shoegaze2/GUI/Layout/: LinearLayout.h
src/Shoegaze2/GUI/Primitives/: Point.h  Position.h  Size.h
src/Shoegaze2/GUI/Widget/: Button.cpp  Button.h
src/Shoegaze2/System/: System.cpp  System.h
src/Shoegaze2/System/Events/: Event.cpp  Event.h
src/Shoegaze2/System/Interface/: Device.h
src/Shoegaze2/System/Interface/Audio/: AudioBuffer.h  AudioMixer.cpp  AudioMixer.h  AudioQueue.cpp  AudioQueue.h  IAudioDescriptor.cpp  IAudioDescriptor.h  IAudioDevice.cpp  IAudioDevice.h  IAudioSystem.cpp  IAudioSystem.h
src/Shoegaze2/System/Interface/GUI/: IBrush.h  ICanvas.h  IDisplayDevice.h  IImage.h  IPaint.h  IPath.h  IRenderingContext.cpp  IRenderingContext.h  IUISystem.h
src/Shoegaze2/System/Interface/Input/: IMouse.h
src/Shoegaze2/System/Text/: Encoding.cpp  Encoding.h  String.cpp  String.h  UTF8Encoding.cpp  UTF8Encoding.h
src/Shoegaze2/System/Utils/: SharedPtrWrapper.h
